# better-c-macros

./: .gitignore  Introduction.md  README.md  Workflow.md  WrapUp.md  bcm.opam  dune-project
.github/workflows/: ci.yml
Arguments/: ParseBCM.ml  ParseBCM.mli  dune
ArgumentsParser/: ParseBCM.ml  ParseBCM.mli  ParseBCMC.ml  ParseBCMC.mli  dune
BCMMacros/: BCMMacros.ml  DeriveMacros.ml  Install.ml  Install.mli  Interpret.ml  Interpret.mli  MacroEnv.ml  MacroEnv.mli  Tokens.ml  Transform.ml  Transform.mli  dune
CLang/: cast.ml  clexer.mll  cparser.mly  dune  eval.ml
CProcessing/: Cast.ml  Eval.ml  PPCast.ml  Print.ml  Print.mli  cLexer.mll  cParser.mly  cast.ml  declParser.mly  dune
DeclarativeMacros/: declAst.ml  dune
MacroGenerator/: Interpret.ml  Interpret.mli  MacroEnv.ml  MacroEnv.mli  Transform.ml  Transform.mli  dune
RunUtilities/: Runner.ml  Runner.mli  dune
declarativeMacros/: declAst.ml  declLexer.mll  declParser.mly  declpp.ml  dune  eval.ml
examples/: fun_examples.c
examples/debugPrint/: Makefile  main.c
examples/full_project/: .nothing_to_see_here.c  Makefile  main.c
examples/inline_functional_macros/: asBytes.c  bitwise.c  multiLetterSwap.c  multiLetterSwapMap.c  simpleSwap.c
examples/module_functional_macros/: factorial.c  factorial.ml
test/: dune  sanityCheck.ml  testDeclParser.ml
test_bcm/: NewtonCotes.c  main.c
test_bcm/ParseCommentsAndCMacros/: dune  macro_in_text.c  main.c  multiline_macro.c  small.c  test_ParseCommentsAndCMacros.ml  weird_comments.c
test_bcm/ParseDeriveMacro/: array.c  attributes.c  awful_field_types.c  (+8 more)
(+37 files in other folders)
